--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,3 +60,28 @@ label {
 .ant-divider-horizontal.ant-divider-with-text {
    margin: 0;
 }
+
+/* swiper js css */
+
+.swiper {
+  width: 100%;
+  /* height: 100%; */
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* background: #fff; */
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  /* display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; */
+}
