--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ html {
    transition: 0.5s;
 }
 
-.light-theme {
+:root {
    --neumorphismBackground1: #E7F1F3;
    --neumorphismBackground2: #edf5f7;
    --neuShadLight1: #ffffff;
@@ -39,13 +39,6 @@ html {
    --neuShadDark2: #bebebe;
 }
 
-.dark-theme {
-   --neumorphismBackground1: #1f1f1f;
-   --neumorphismBackground2: #272727;
-   --neuShadLight1: #000000ab;
-   --neuShadDark1: #0d0d0e;
-   --neuShadDark2: #0e0d0d;
-}
 
 .gradient-background {
    background-image: radial-gradient(164.75% 100% at 50% 0%,#334155 0%,#0F172A 48.73%);
@@ -99,23 +92,7 @@ label {
   align-items: center;
 }
 
-.swiper-slide img {
-  /* display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover; */
-
-  color: #212B33;   /* dark-blue-primary */
-  color: #25333F;   /* dark-blue-secondary */
-  color: #1677ff;   /* primary */
-  color: #E7F1F3;   /* background-primary */
-  color: #CBDDE0;   /* background-secondary */
-  color: #111111;   /* dark-blue-primary */
-  color: #111111;   /* dark-blue-primary */
-  color: #111111;   /* dark-blue-primary */
-}
-
-::selection {
+/* ::selection {
    background-color: #25333F;
    color: white;
 }
@@ -123,4 +100,4 @@ label {
 ::-moz-selection {
    background-color: #25333F;
    color: white;
-}
+} */
